alignment issue solved

--- a/styles.css
+++ b/styles.css
@@ -637,16 +637,18 @@ main {
 }
 /* Testmonials */
 .site{
-  height: 100vh;
+ 
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 8rem;
+  margin-bottom: 4rem;
 }
 .container{
   max-width: 1100px;
   width: 100%;
   padding: 0 30px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
 
 }
 .testi{
@@ -655,10 +657,10 @@ main {
 }
 .testi .head{
   text-align: center;
-  margin-bottom: 60px;
+  margin-bottom: 8rem;
 }
 .testi .head h3{
-  font-size: 34px;
+  font-size: 60px;
   font-weight: 800;
 }
 .testi .wrapper {
@@ -1467,8 +1469,8 @@ body.dark .contributor-card:hover {
 .contributors-main h1,
 .contact-main h1 {
   text-align: center;
-  margin-top: 7rem;
-  margin-bottom: 2.5rem;
+  /* margin-top: 7rem; */
+  margin-bottom: 5rem;
   font-size: 2.1rem;
   font-weight: 700;
 }
@@ -1507,7 +1509,7 @@ body.dark .contributor-card:hover {
   -webkit-background-clip: text;
   text-shadow: 0 2px 4px rgba(0, 0, 0, 0.15),
                0 4px 8px rgba(79, 140, 255, 0.25);
-  margin-bottom: 1.5rem;
+  margin-bottom: 5rem;
   transition: all 0.3s ease;
 }
 
